--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
+<!-- a donde le añado los estilos del body? -->
 <body>
   <app-root></app-root>
 </body>
